--- a/wp-content/themes/blankslate/style.css
+++ b/wp-content/themes/blankslate/style.css
@@ -16,3 +16,41 @@ BlankSlate is distributed under the terms of the GNU GPL
 
 html,body,div,span,applet,object,iframe,h1,h2,h3,h4,h5,h6,p,blockquote,pre,a,abbr,acronym,address,big,cite,code,del,dfn,em,img,ins,kbd,q,s,samp,small,strike,strong,sub,sup,tt,var,b,u,i,center,dl,dt,dd,ol,ul,li,fieldset,form,label,legend,table,caption,tbody,tfoot,thead,tr,th,td,article,aside,canvas,details,embed,figure,figcaption,footer,header,hgroup,menu,nav,output,ruby,section,summary,time,mark,audio,video{font-size:100%;font:inherit;padding:0;border:0;margin:0;vertical-align:baseline}body{line-height:1}ol,ul{list-style:none}blockquote,q{quotes:none}blockquote:before,blockquote:after,q:before,q:after{content:'';content:none}table{border-collapse:collapse;border-spacing:0}article,aside,details,figcaption,figure,footer,header,hgroup,menu,nav,section{display:block}.clear{clear:both}
 .sticky{}.bypostauthor{}.wp-caption{}.wp-caption-text{}.gallery-caption{}.alignright{}.alignleft{}.aligncenter{}.screen-reader-text{clip:rect(1px, 1px, 1px, 1px);position:absolute !important}
+
+#wrapper {
+	max-width: 1280px;
+	margin: auto;
+}
+
+#header {
+	height: 110px;
+	margin-top: 40px;
+	margin-left: 80px;
+	margin-right: 80px;
+}
+
+#content {
+	margin-left: 80px;
+	margin-right: 80px;
+}
+
+#branding {
+	display:inline;
+	float: left;
+}
+
+.menu-burger {
+	width: 61px;
+	height: 61px;
+	background-image: url('images/menu-burger.png');
+	float: right;
+}
+
+.menu {
+	display: none;
+}
+
+.splash {
+	height: 503px;
+	overflow:hidden;
+}
