added fula fisken mockup

--- a/wp-content/themes/blankslate/style.css
+++ b/wp-content/themes/blankslate/style.css
@@ -91,6 +91,10 @@ h1.projects {
 	min-height: 280px;
 }
 
+.project-small {
+	max-width: 280px;
+}
+
 .project .title-right {
 	text-align: left;
 	position: absolute;
@@ -234,6 +238,10 @@ aside.contact .header {
 	}
 	.project {
 		margin-bottom: 0;
+		min-height: 0;
+	}
+	.project-small {
+		max-width: none;
 	}
 	.project-right, .project-left {
 		position: inherit;
