--- a/wp-content/themes/blankslate/style.css
+++ b/wp-content/themes/blankslate/style.css
@@ -27,8 +27,8 @@ html,body,div,span,applet,object,iframe,h1,h2,h3,h4,h5,h6,p,blockquote,pre,a,abb
 }
 
 #header {
-	height: 110px;
-	margin-top: 40px;
+	height: 150px;
+	padding-top: 40px;
 	margin-left: 80px;
 	margin-right: 80px;
 }
@@ -66,10 +66,20 @@ html,body,div,span,applet,object,iframe,h1,h2,h3,h4,h5,h6,p,blockquote,pre,a,abb
 .splash {
 }
 
-.arrow {
+a.arrow-up, a.arrow-down {
 	text-align:center;
-	padding-top: 100px;
-	padding-bottom: 150px;
+	margin-top: 100px;
+	margin-bottom: 100px;
+	width: 70px;
+	height: 37px;
+	background: url('images/arrow.png') no-repeat;
+	display: inline-block;
+}
+
+a.arrow-up {
+	-ms-transform: rotate(180deg); /* IE 9 */
+    -webkit-transform: rotate(180deg); /* Chrome, Safari, Opera */
+    transform: rotate(180deg);
 }
 
 h1 {
