--- a/wp-content/themes/blankslate/css/foundation.css
+++ b/wp-content/themes/blankslate/css/foundation.css
@@ -376,7 +376,7 @@ html {
 body {
   padding: 0;
   margin: 0;
-  font-family: "Helvetica Neue", Helvetica, Roboto, Arial, sans-serif;
+  font-family: "Source Sans Pro", Helvetica, Roboto, Arial, sans-serif;
   font-weight: normal;
   line-height: 1.5;
   color: #0a0a0a;
@@ -476,7 +476,7 @@ h3,
 h4,
 h5,
 h6 {
-  font-family: "Helvetica Neue", Helvetica, Roboto, Arial, sans-serif;
+  font-family: "Source Sans Pro", Helvetica, Roboto, Arial, sans-serif;
   font-weight: normal;
   font-style: normal;
   color: inherit;
@@ -526,12 +526,12 @@ h6 {
     font-size: 1rem; } }
 
 a {
-  color: #2ba6cb;
+  color: #ba3963;
   text-decoration: none;
   line-height: inherit;
   cursor: pointer; }
   a:hover, a:focus {
-    color: #258faf; }
+    color: #fa6993; }
   a img {
     border: 0; }
 
@@ -1072,7 +1072,7 @@ select {
   padding: 0.85em 1em;
   margin: 0 0 1rem 0;
   font-size: 0.9rem;
-  background-color: #2ba6cb;
+  background-color: #ba3963;
   color: #fefefe; }
   [data-whatinput='mouse'] .button {
     outline: 0; }
@@ -1091,7 +1091,7 @@ select {
     margin-left: 0;
     margin-right: 0; }
   .button.primary {
-    background-color: #2ba6cb;
+    background-color: #ba3963;
     color: #fefefe; }
     .button.primary:hover, .button.primary:focus {
       background-color: #2285a2;
@@ -1133,16 +1133,16 @@ select {
       background-color: #1b1b1b;
       color: #fefefe; }
   .button.hollow {
-    border: 1px solid #2ba6cb;
-    color: #2ba6cb; }
+    border: 1px solid #ba3963;
+    color: #ba3963; }
     .button.hollow, .button.hollow:hover, .button.hollow:focus {
       background-color: transparent; }
     .button.hollow:hover, .button.hollow:focus {
       border-color: #165366;
       color: #165366; }
     .button.hollow.primary {
-      border: 1px solid #2ba6cb;
-      color: #2ba6cb; }
+      border: 1px solid #ba3963;
+      color: #ba3963; }
       .button.hollow.primary:hover, .button.hollow.primary:focus {
         border-color: #165366;
         color: #165366; }
@@ -1186,7 +1186,7 @@ select {
     opacity: 0.25;
     cursor: not-allowed; }
     .button.disabled:hover, .button.disabled:focus, .button[disabled]:hover, .button[disabled]:focus {
-      background-color: #2ba6cb;
+      background-color: #ba3963;
       color: #fefefe; }
   .button.dropdown::after {
     content: '';
@@ -1263,7 +1263,7 @@ select {
         -ms-flex: 1 1 0px;
             flex: 1 1 0px; }
   .button-group.primary .button {
-    background-color: #2ba6cb;
+    background-color: #ba3963;
     color: #fefefe; }
     .button-group.primary .button:hover, .button-group.primary .button:focus {
       background-color: #2285a2;
@@ -1371,7 +1371,7 @@ select {
   display: inline-block;
   width: 1.4rem;
   height: 1.4rem;
-  background-color: #2ba6cb;
+  background-color: #ba3963;
   transition: all 0.2s ease-in-out;
   -ms-touch-action: manipulation;
       touch-action: manipulation;
@@ -1453,7 +1453,7 @@ select {
             transform: translate3d(0, 0, 0);
     border-radius: 3px; }
   input:checked ~ .switch-paddle {
-    background: #2ba6cb; }
+    background: #ba3963; }
     input:checked ~ .switch-paddle::after {
       left: 2.25rem; }
   [data-whatinput='mouse'] input:focus ~ .switch-paddle {
@@ -1657,7 +1657,7 @@ select {
     margin-left: 1rem; }
   .menu .active > a {
     color: #fefefe;
-    background: #2ba6cb; }
+    background: #ba3963; }
 
 .menu-text {
   font-weight: bold;
@@ -1710,7 +1710,7 @@ select {
     width: 0;
     height: 0;
     border: inset 6px;
-    border-color: transparent transparent transparent #2ba6cb;
+    border-color: transparent transparent transparent #ba3963;
     border-left-style: solid;
     border-right-width: 0;
     position: absolute;
@@ -1819,7 +1819,7 @@ select {
   width: 0;
   height: 0;
   border: inset 5px;
-  border-color: transparent transparent transparent #2ba6cb;
+  border-color: transparent transparent transparent #ba3963;
   border-left-style: solid;
   border-right-width: 0; }
 
@@ -1872,7 +1872,7 @@ select {
     width: 0;
     height: 0;
     border: inset 5px;
-    border-color: transparent transparent transparent #2ba6cb;
+    border-color: transparent transparent transparent #ba3963;
     border-left-style: solid;
     border-right-width: 0; } }
 
@@ -1925,7 +1925,7 @@ select {
     width: 0;
     height: 0;
     border: inset 5px;
-    border-color: transparent transparent transparent #2ba6cb;
+    border-color: transparent transparent transparent #ba3963;
     border-left-style: solid;
     border-right-width: 0; } }
 
@@ -1983,7 +1983,7 @@ select {
     width: 0;
     height: 0;
     border: inset 5px;
-    border-color: transparent transparent transparent #2ba6cb;
+    border-color: transparent transparent transparent #ba3963;
     border-left-style: solid;
     border-right-width: 0; }
   .is-dropdown-submenu .is-dropdown-submenu {
@@ -2152,7 +2152,7 @@ select {
       top: 1px;
       opacity: 1; }
   .breadcrumbs a {
-    color: #2ba6cb; }
+    color: #ba3963; }
     .breadcrumbs a:hover {
       text-decoration: underline; }
   .breadcrumbs .disabled {
@@ -2194,7 +2194,7 @@ select {
       background: #e6e6e6; }
   .pagination .current {
     padding: 0.1875rem 0.625rem;
-    background: #2ba6cb;
+    background: #ba3963;
     color: #fefefe;
     cursor: default; }
   .pagination .disabled {
@@ -2236,7 +2236,7 @@ select {
   padding: 1.25rem 1rem;
   line-height: 1;
   font-size: 0.75rem;
-  color: #2ba6cb;
+  color: #ba3963;
   position: relative;
   border: 1px solid #e6e6e6;
   border-bottom: 0; }
@@ -2423,7 +2423,7 @@ body {
     background: transparent; }
 
 .tabs.primary {
-  background: #2ba6cb; }
+  background: #ba3963; }
   .tabs.primary > li > a {
     color: #fefefe; }
     .tabs.primary > li > a:hover, .tabs.primary > li > a:focus {
@@ -2696,7 +2696,7 @@ table.hover tr:nth-of-type(even):hover {
   font-size: 0.6rem;
   text-align: center;
   border-radius: 50%;
-  background: #2ba6cb;
+  background: #ba3963;
   color: #fefefe; }
   .badge.secondary {
     background: #e9e9e9;
@@ -2725,7 +2725,7 @@ table.hover tr:nth-of-type(even):hover {
   white-space: nowrap;
   cursor: default;
   border-radius: 3px;
-  background: #2ba6cb;
+  background: #ba3963;
   color: #fefefe; }
   .label.secondary {
     background: #e9e9e9;
@@ -2752,7 +2752,7 @@ table.hover tr:nth-of-type(even):hover {
   margin-bottom: 1rem;
   border-radius: 3px; }
   .progress.primary .progress-meter {
-    background-color: #2ba6cb; }
+    background-color: #ba3963; }
   .progress.secondary .progress-meter {
     background-color: #e9e9e9; }
   .progress.alert .progress-meter {
@@ -2771,7 +2771,7 @@ table.hover tr:nth-of-type(even):hover {
   display: block;
   width: 0%;
   height: 100%;
-  background-color: #2ba6cb;
+  background-color: #ba3963;
   border-radius: 3px; }
 
 .progress-meter-text {
