--- a/wp-content/themes/blankslate/style.css
+++ b/wp-content/themes/blankslate/style.css
@@ -17,7 +17,6 @@ BlankSlate is distributed under the terms of the GNU GPL
 html,body,div,span,applet,object,iframe,h1,h2,h3,h4,h5,h6,p,blockquote,pre,a,abbr,acronym,address,big,cite,code,del,dfn,em,img,ins,kbd,q,s,samp,small,strike,strong,sub,sup,tt,var,b,u,i,center,dl,dt,dd,ol,ul,li,fieldset,form,label,legend,table,caption,tbody,tfoot,thead,tr,th,td,article,aside,canvas,details,embed,figure,figcaption,footer,header,hgroup,menu,nav,output,ruby,section,summary,time,mark,audio,video{font-size:100%;font:inherit;padding:0;border:0;margin:0;vertical-align:baseline}body{line-height:1}ol,ul{list-style:none}blockquote,q{quotes:none}blockquote:before,blockquote:after,q:before,q:after{content:'';content:none}table{border-collapse:collapse;border-spacing:0}article,aside,details,figcaption,figure,footer,header,hgroup,menu,nav,section{display:block}.clear{clear:both}
 .sticky{}.bypostauthor{}.wp-caption{}.wp-caption-text{}.gallery-caption{}.alignright{}.alignleft{}.aligncenter{}.screen-reader-text{clip:rect(1px, 1px, 1px, 1px);position:absolute !important}
 
-
 #header {
 	margin: auto;
 	height: 150px;
@@ -84,7 +83,6 @@ h1 {
 h1.projects {
 	margin-bottom: 5.625rem;
 	text-align: center;
-	font-family: "Source Sans Pro", sans-serif;
 	font-weight: 900;
 	font-size: 2.5rem;
 }
@@ -169,8 +167,7 @@ h1.projects {
 }
 
 .quote {
-	font-family: "Source Sans Pro", sans-serif;
-	margin: 0 auto 180px auto;
+	margin: 0 auto 150px auto;
 }
 
 .quote .column {
@@ -181,7 +178,7 @@ h1.projects {
 	font-weight: 600;
 	font-size: 10.625rem;
 	margin-bottom: 0;
-	margin-top: 110px;
+	margin-top: 100px;
 	padding-bottom: 0;
 	line-height: 0.5em;
 	padding-left: 10px;
@@ -191,11 +188,12 @@ h1.projects {
 	font-style: italic;
 	font-size: 1.5625rem;
 	padding-left: 18px;
+	margin-bottom: 0;
+	line-height: 1.875rem;
 }
 
 .about {
-	font-family: "Source Sans Pro", sans-serif;
-	margin: 0 auto;
+	margin: 0 auto 70px auto;
 }
 
 .about .column {
@@ -211,11 +209,11 @@ h1.projects {
 .about p {
 	font-size: 1.125rem;
 	padding-left: 18px;
+	margin-bottom: 0;
 }
 
 aside.contact {
 	float:left;
-	font-family: "Source Sans Pro", sans-serif;
 	font-size: 0.875rem;
 	font-weight: 300;
 	position: absolute;
@@ -290,7 +288,44 @@ aside.contact .header {
 
 .line {
 	border-top: 1px solid #dcdcdc;
-	margin-bottom: 100px;
+	margin-bottom: 80px;
+}
+
+.button-up {
+	display: block;
+	margin: 0 auto 80px;
+	width: 115px;
+	height: 35px;
+	border: 3px solid #ba3963;
+	text-align: center;
+	color: #ba3963;
+}
+
+.button-up:hover {
+	border-color: #fa6993;
+}
+
+a, a:hover {
+	text-decoration: none;
+}
+
+footer .profile .column{
+	max-width: 590px;
+}
+
+footer .profile img {
+	padding-left: 15px;
+}
+
+.vertical-contact {
+	position: absolute;
+	
+	margin-top: 110px;
+	font-size: 40px;
+	font-weight: 900;
+    -ms-transform: rotate(-90deg); /* IE 9 */
+    -webkit-transform: rotate(-90deg); /* Chrome, Safari, Opera */
+    transform: rotate(-90deg);
 }
 
 @media only screen and (max-width: 55em) { 
