--- a/wp-content/themes/blankslate/style.css
+++ b/wp-content/themes/blankslate/style.css
@@ -19,8 +19,7 @@ html,body,div,span,applet,object,iframe,h1,h2,h3,h4,h5,h6,p,blockquote,pre,a,abb
 
 #header {
 	margin: auto;
-	height: 150px;
-	padding: 40px 80px 0 80px;
+	padding: 40px 80px 40px 80px;
 }
 
 #content {
@@ -53,9 +52,6 @@ html,body,div,span,applet,object,iframe,h1,h2,h3,h4,h5,h6,p,blockquote,pre,a,abb
 	background-image: url('images/splash.png');
 }
 
-.splash {
-}
-
 .logo {
 	width: 61px;
 	height: 61px;
@@ -76,8 +72,6 @@ a.arrow-up {
     transform: rotate(180deg);
 }
 
-h1 {
-}
 
 h1.projects {
 	margin-bottom: 5.625rem;
@@ -107,8 +101,6 @@ h1.projects {
 .project .title-right {
 	text-align: left;
 	position: absolute;
-	right: -195px;
-	width: 195px;
 	padding: 10px 0 0 20px;
 	border-top: 3px solid black;
 }
@@ -116,8 +108,6 @@ h1.projects {
 .project .title-left {
 	text-align: right;
 	position: absolute;
-	left: -195px;
-	width: 195px;
 	padding: 10px 20px 0 0;
 	border-top: 3px solid black;
 }
@@ -125,9 +115,7 @@ h1.projects {
 .project .title-left-down {
 	text-align: right;
 	position: absolute;
-	left: -195px;
 	top: 310px;
-	width: 195px;
 	padding: 10px 20px 0 0;
 	border-top: 3px solid black;
 }
@@ -304,22 +292,73 @@ aside.contact .header {
 	border-color: #fa6993;
 }
 
+
 a, a:hover {
 	text-decoration: none;
 }
 
-footer .profile .column{
+footer {
+	padding: 0 80px 100px 80px;
+}
+
+footer .row.profile .columns.profile{
 	max-width: 590px;
 }
 
-footer .profile img {
+footer .row.profile img,
+footer .row.profile p {
 	padding-left: 15px;
+}
+
+footer .row.profile .row .column {
+	margin-bottom: 30px;
+}
+
+footer .column-social {
+}
+
+footer .social-stuff {
+	position: relative;
+}
+
+footer .social-icon-bottom {
+	position: absolute;
+	bottom: 0px;
+	left: 0px;
+}
+
+footer .social-icon-top {
+	position: absolute;
+	top: 0px;
+	left: 0px;
+}
+
+footer .social-icon {
+	color: #ba3963;
+	padding: 0 !important;
+	margin-left: 60px !important;
+}
+
+p.work-title {
+	font-size: 1.5625rem;
+	font-weight: 300;
+	line-height: 1.5rem;
+	padding: 0;
+	margin: 0;
+}
+
+p.name {
+	font-size: 1.25rem;
+	line-height: 1.5rem;
+	font-weight: 900;
+	padding: 0;
+	margin: 0 0 -2px 0;
 }
 
 .vertical-contact {
 	position: absolute;
-	
-	margin-top: 110px;
+	left: 0;
+	margin-top: 170px;
 	font-size: 40px;
 	font-weight: 900;
     -ms-transform: rotate(-90deg); /* IE 9 */
@@ -327,7 +366,26 @@ footer .profile img {
     transform: rotate(-90deg);
 }
 
-@media only screen and (max-width: 55em) { 
+/* Small */
+@media only screen and (max-width: 40em) { 
+
+	#header {
+		padding: 20px 20px 20px 20px;
+	}
+	#content {
+		padding: 0 20px 0 20px;
+	}
+	footer {
+		padding: 0 20px 100px 20px;
+	}
+	footer .social-icon {
+		min-width: 200px;
+		margin-left: 30px !important;
+	}
+}
+
+/* Medium */
+@media only screen and (max-width: 64em) { 
 	.project-bottom {
 		position: relative;
 		bottom: 0;
