--- a/wp-content/themes/blankslate/style.css
+++ b/wp-content/themes/blankslate/style.css
@@ -22,7 +22,7 @@ html,body,div,span,applet,object,iframe,h1,h2,h3,h4,h5,h6,p,blockquote,pre,a,abb
 	padding: 40px 80px 40px 80px;
 }
 
-#content {
+.content {
 	margin: auto;
 	padding: 0 80px 0 80px;
 }
@@ -101,14 +101,14 @@ h1.projects {
 .project .title-right {
 	text-align: left;
 	position: absolute;
-	padding: 10px 0 0 20px;
+	padding: 10px 20px 0 20px;
 	border-top: 3px solid black;
 }
 
 .project .title-left {
 	text-align: right;
 	position: absolute;
-	padding: 10px 20px 0 0;
+	padding: 10px 20px 0 20px;
 	border-top: 3px solid black;
 }
 
@@ -116,7 +116,7 @@ h1.projects {
 	text-align: right;
 	position: absolute;
 	top: 310px;
-	padding: 10px 20px 0 0;
+	padding: 10px 20px 0 20px;
 	border-top: 3px solid black;
 }
 
@@ -133,6 +133,10 @@ h1.projects {
 .project-left {
 	position: absolute;
 	left: 0;
+}
+
+.project-side-column {
+	display:none;
 }
 
 .margin-left {
@@ -161,7 +165,7 @@ h1.projects {
 	max-width: 590px;
 }
 .quote .quote-icon {
-	color: #bb3964;
+	color: #ba3963;
 	font-weight: 600;
 	font-size: 10.625rem;
 	margin-bottom: 0;
@@ -361,20 +365,21 @@ p.name {
 	position: absolute;
 	left: 0;
 	margin-top: 170px;
-	font-size: 40px;
+	font-size: 40px !important;
 	font-weight: 900;
     -ms-transform: rotate(-90deg); /* IE 9 */
     -webkit-transform: rotate(-90deg); /* Chrome, Safari, Opera */
     transform: rotate(-90deg);
 }
 
-/* Small */
-@media only screen and (max-width: 40em) { 
+
+/* Small Only*/
+@media screen and (max-width: 39.9375em) {
 
 	#header {
 		padding: 20px 20px 20px 20px;
 	}
-	#content {
+	.content {
 		padding: 0 20px 0 20px;
 	}
 	footer {
@@ -386,14 +391,28 @@ p.name {
 	}
 }
 
-/* Medium */
+/* Medium and up */
+@media screen and (min-width: 40em) {
+}
+
+/* Medium only */
+@media screen and (min-width: 40em) and (max-width: 63.9375em) {}
+
+/* Large and up */
+@media screen and (min-width: 64em) {
+	.show-for-medium-down {
+		display: none !important;
+	}
+}
+
+/* Large only */
+@media screen and (min-width: 64em) and (max-width: 74.9375em) {}
+
+/* Medium and down */
 @media only screen and (max-width: 64em) { 
 	.project-bottom {
 		position: relative;
 		bottom: 0;
-	}
-	.quote, .about {
-		width: auto;
 	}
 	.margin-left {
 		margin-left: 0;		
@@ -405,17 +424,23 @@ p.name {
 		width: 100%;
 	}
 	.project {
-		margin-bottom: 0;
+		margin-bottom: 30px;
 		min-height: 0;
 	}
 	.project-small {
 		max-width: none;
-	}
-	.project-right, .project-left {
 		position: inherit;
 	}
-	.title-right, .title-left, .title-left-down {
-		display: none;
+	.project-side-column {
+		display:block;
+	}
+
+	.quote, .about {
+		width: auto;
+	}
+
+	.hide-for-medium-down {
+		display: none !important;
 	}
 }
 
