--- a/wp-content/themes/blankslate/style.css
+++ b/wp-content/themes/blankslate/style.css
@@ -34,17 +34,58 @@ html,body,div,span,applet,object,iframe,h1,h2,h3,h4,h5,h6,p,blockquote,pre,a,abb
 
 .menu-burger {
 	margin-top: 20px;
-	width: 22px;
-	height: 13px;
 	float: right;
 }
 
-.menu-burger:hover {
+.menu-burger-icon svg:hover {
 	fill: #fa6993;
 }
 
-.menu {
-	display: none !important;
+.menu-burger-icon {
+	width: 22px;
+	height: 13px;
+}
+
+.menu-block {
+	display: none;
+	position: absolute;
+	top: 0;
+	left: 0;
+	height: 100%;
+	width: 100%;
+	background-color: black;
+	z-index: 999;
+}
+
+.menu-block ul {
+	text-align: center;
+	list-style-type: none;
+	font-size: 3.75rem;
+	font-weight: 900;
+	margin-top: 80px;
+}
+.menu-block ul a {
+	color: white;
+}
+.menu-block ul a:hover {
+	color: #fa6993;
+}
+
+.menu-block .menu-burger,
+.menu-block .logo {
+	display:block;
+	position:relative;
+	fill: white;
+}
+
+.menu-block .menu-burger{
+	text-align: right;
+	margin: 60px 80px 0 0;
+}
+
+.menu-block .logo {
+	text-align: left;
+	margin: 40px 0 0 80px;
 }
 
 .splash {
@@ -55,11 +96,11 @@ html,body,div,span,applet,object,iframe,h1,h2,h3,h4,h5,h6,p,blockquote,pre,a,abb
 	background-image: url('images/splash.png');
 }
 
-.logo {
+.logo-icon {
 	width: 61px;
 	height: 61px;
 }
-.logo:hover {
+.logo-icon:hover {
 	fill: #fa6993;
 }
 
@@ -346,7 +387,7 @@ a, a:hover {
 }
 
 footer {
-	padding: 0 80px 100px 80px;
+	padding: 0 80px 40px 80px;
 	position: relative;
 	overflow-x: hidden;
 }
@@ -434,7 +475,7 @@ p.name {
 	}
 
 	footer {
-		padding: 0 20px 100px 20px;
+		padding: 0 20px 20px 20px;
 	}
 
 	footer .social-icon {
@@ -521,6 +562,20 @@ p.name {
 	footer .social-icon {
 	    min-width: 200px;
 	    margin-left: 20px !important;
+	}
+
+	.menu-block ul a {
+		font-size: 2.5rem;
+	}
+
+	.menu-block .menu-burger{
+		text-align: right;
+		margin: 40px 20px 0 0;
+	}
+
+	.menu-block .logo {
+		text-align: left;
+		margin: 20px 0 0 20px;
 	}
 }
 
