--- a/wp-content/themes/blankslate/style.css
+++ b/wp-content/themes/blankslate/style.css
@@ -591,6 +591,21 @@ p.name {
 		text-align: left;
 		margin: 20px 0 0 20px;
 	}
+
+	.single h1.title {
+		font-size: 1.25rem;
+		margin-bottom: 30px;
+	}
+
+	.single .category {
+		font-size: 1.5625rem;
+		margin-top: 30px;
+	}
+
+	.single .single-image {
+		margin-bottom: 50px;
+	}
+
 }
 
 /* Medium and up */
