--- a/wp-content/themes/blankslate/style.css
+++ b/wp-content/themes/blankslate/style.css
@@ -99,6 +99,12 @@ html,body,div,span,applet,object,iframe,h1,h2,h3,h4,h5,h6,p,blockquote,pre,a,abb
 	background-image: url('images/splash.png');
 }
 
+.logo {
+    display: block;
+    width: 70px;
+    height: 70px;
+}
+
 .logo-icon {
 	width: 70px;
 	height: 70px;
@@ -481,6 +487,20 @@ p.name {
 		margin-left: 30px !important;
 	}
 
+	.logo {
+		width: 50px;
+		height: 50px;
+	}
+
+	.logo-icon {
+		width: 50px;
+		height: 50px;
+	}
+
+	.menu-burger {
+		margin-top: 10px;
+	}
+
 	h1.projects {
 		margin-bottom: 50px;
 		font-size: 1.875rem;
@@ -561,6 +581,14 @@ p.name {
 	    min-width: 200px;
 	    margin-left: 20px !important;
 	}
+	.menu-block ul {
+		margin: 20px 20px;
+	}
+
+	.menu-block ul li {
+		text-align: right;
+		font-size: 1rem;
+	}
 
 	.menu-block ul a {
 		font-size: 2.5rem;
@@ -568,7 +596,7 @@ p.name {
 
 	.menu-block .menu-cross{
 		text-align: right;
-		margin: 40px 20px 0 0;
+		margin: 30px 20px 0 0;
 	}
 
 	.menu-block .logo {
