fixed mobile style front

--- a/wp-content/themes/blankslate/style.css
+++ b/wp-content/themes/blankslate/style.css
@@ -515,7 +515,7 @@ p.name {
 	}
 
 	.quote {
-		margin-bottom: 65px;
+		margin-bottom: 60px;
 	}
 
 	.quote .quote-icon {
@@ -528,12 +528,14 @@ p.name {
 	.quote .quote-text {
 		font-size: 1.375rem;
 		padding-left: 0;
+		line-height: 1.6rem;
 	}
 
 	.about h2 {
 		font-size: 1.25rem;
 		font-weight: 700;
 		padding-left: 0;
+		padding-top: 60px;
 	}
 
 	.about p {
@@ -544,7 +546,7 @@ p.name {
 	}
 
 	.line {
-		margin-bottom: 50px;
+		margin-bottom: 60px;
 	}
 
 	p.work-title {
@@ -626,7 +628,6 @@ p.name {
 	.single .single-image {
 		margin-bottom: 50px;
 	}
-
 }
 
 /* Medium and up */
@@ -694,7 +695,7 @@ p.name {
 	}
 
 	.button-up {
-		margin-bottom: 60px;
+		margin-bottom: 80px;
 	}
 }
 
