--- a/wp-content/themes/blankslate/css/foundation.css
+++ b/wp-content/themes/blankslate/css/foundation.css
@@ -376,7 +376,7 @@ html {
 body {
   padding: 0;
   margin: 0;
-  font-family: "Source Sans Pro", Helvetica, Roboto, Arial, sans-serif;
+  font-family: "source-sans-pro", Helvetica, Roboto, Arial, sans-serif;
   font-weight: normal;
   line-height: 1.5;
   color: #0a0a0a;
@@ -476,7 +476,7 @@ h3,
 h4,
 h5,
 h6 {
-  font-family: "Source Sans Pro", Helvetica, Roboto, Arial, sans-serif;
+  font-family: "source-sans-pro", Helvetica, Roboto, Arial, sans-serif;
   font-weight: normal;
   font-style: normal;
   color: inherit;
