--- a/wp-content/themes/blankslate/style.css
+++ b/wp-content/themes/blankslate/style.css
@@ -57,7 +57,7 @@ html,body,div,span,applet,object,iframe,h1,h2,h3,h4,h5,h6,p,blockquote,pre,a,abb
 	position: absolute;
 	top: 0;
 	left: 0;
-	height: 100%;
+	height: 120%;
 	width: 100%;
 	background-color: black;
 	z-index: 999;
@@ -156,7 +156,6 @@ h1.projects {
 .project .title-left {
 	border-top: 3px solid black;
 	position: absolute;
-	max-width: 200px;
 }
 
 .project .title-right {
@@ -505,6 +504,109 @@ footer img {
     transform: rotate(-90deg);
 }
 
+/* Medium and up */
+@media screen and (min-width: 40em) {
+}
+
+/* Medium only */
+@media screen and (min-width: 40em) and (max-width: 63.9375em) {}
+
+/* Medium and down */
+@media only screen and (max-width: 64em) { 
+	.project-bottom {
+		position: relative;
+		bottom: 0;
+	}
+	.margin-left {
+		margin-left: 0;		
+	}
+	.margin-right {
+		margin-right: 0;		
+	}
+	.project img {
+		width: 100%;
+	}
+	.project {
+		margin-bottom: 30px;
+		min-height: 0;
+	}
+	.project-small {
+		max-width: none;
+		position: inherit;
+	}
+	.project-side-column {
+		display:block;
+	}
+
+	.quote, .about {
+		width: auto;
+	}
+
+	.hide-for-medium-down {
+		display: none !important;
+	}
+
+	.project .title-left-down,
+	.project .title-right,
+	.project .title-left {
+		max-width: 200px;
+	}
+
+	.quote .quote-icon {
+		margin-left: -8px;
+		padding-left: 0;
+	}
+
+	.quote .quote-text {
+		padding-left: 0;
+	}
+
+	.about {
+		margin-bottom: 20px;
+	}
+
+	.about h2 {
+		padding-left: 0;
+	}
+
+	.about p {
+		padding-left: 0;
+
+	}
+
+	.button-up {
+		margin-bottom: 80px;
+	}
+}
+
+/* Large and up */
+@media screen and (min-width: 64em) {
+	.show-for-medium-down {
+		display: none !important;
+	}
+}
+
+/* Large only */
+@media screen and (min-width: 64em) and (max-width: 74.9375em) {
+	div.contact ul li {
+		padding-left: 18px;
+	}
+}
+
+/* Large and down */
+@media only screen and (max-width: 75em) { 
+	.hide-for-large-down {
+		display: none !important;
+	}
+}
+
+/* Above Large */
+@media screen and (min-width: 75em) {
+	.show-for-large-down {
+		display: none !important;
+	}
+}
+
 
 /* Small Only*/
 @media screen and (max-width: 39.9375em) {
@@ -554,8 +656,9 @@ footer img {
 		margin-bottom: 100px;
 	}
 
-	.project a, .project a:active {
+	.project a, .project a:hover, .project a:active {
 		font-size: 0.875rem;
+		letter-spacing: -0.8px;
 	}
 
 	.quote {
@@ -643,16 +746,17 @@ footer img {
     	margin-bottom: 20px !important;
 	}
 	.menu-block ul {
-		margin: 20px 20px;
+		margin: 70px 20px;
 	}
 
 	.menu-block ul li {
-		text-align: right;
+		text-align: center;
 		font-size: 1rem;
 	}
 
 	.menu-block ul a {
-		font-size: 2.5rem;
+		font-size: 1.875rem;
+		line-height: 3.5rem;
 	}
 
 	.menu-block .menu-cross{
@@ -701,100 +805,13 @@ footer img {
 	}
 }
 
-/* Medium and up */
-@media screen and (min-width: 40em) {
-}
+/* Extra Small Only*/
+@media screen and (max-width: 20.9375em) {
 
-/* Medium only */
-@media screen and (min-width: 40em) and (max-width: 63.9375em) {}
-
-/* Medium and down */
-@media only screen and (max-width: 64em) { 
-	.project-bottom {
-		position: relative;
-		bottom: 0;
-	}
-	.margin-left {
-		margin-left: 0;		
-	}
-	.margin-right {
-		margin-right: 0;		
-	}
-	.project img {
-		width: 100%;
-	}
-	.project {
-		margin-bottom: 30px;
-		min-height: 0;
-	}
-	.project-small {
-		max-width: none;
-		position: inherit;
-	}
-	.project-side-column {
-		display:block;
-	}
-
-	.quote, .about {
-		width: auto;
-	}
-
-	.hide-for-medium-down {
-		display: none !important;
-	}
-
-	.quote .quote-icon {
-		margin-left: -8px;
-		padding-left: 0;
-	}
-
-	.quote .quote-text {
-		padding-left: 0;
-	}
-
-	.about {
-		margin-bottom: 20px;
-	}
-
-	.about h2 {
-		padding-left: 0;
-	}
-
-	.about p {
-		padding-left: 0;
-
-	}
-
-	.button-up {
-		margin-bottom: 80px;
-	}
-}
-
-/* Large and up */
-@media screen and (min-width: 64em) {
-	.show-for-medium-down {
-		display: none !important;
-	}
-}
-
-/* Large only */
-@media screen and (min-width: 64em) and (max-width: 74.9375em) {
-	div.contact ul li {
-		padding-left: 18px;
-	}
-}
-
-/* Large and down */
-@media only screen and (max-width: 75em) { 
-	.hide-for-large-down {
-		display: none !important;
-	}
-}
-
-/* Above Large */
-@media screen and (min-width: 75em) {
-	.show-for-large-down {
-		display: none !important;
+	.project .title-left-down,
+	.project .title-right,
+	.project .title-left {
+		max-width: 140px;
 	}
 }
 
