--- a/wp-content/themes/blankslate/style.css
+++ b/wp-content/themes/blankslate/style.css
@@ -159,16 +159,19 @@ h1.projects {
 }
 
 .project .title-right {
+	right:0;
 	text-align: left;
 	padding: 10px 20px 0 20px;
 }
 
 .project .title-left {
+	left: 0;
 	text-align: right;
 	padding: 10px 20px 0 20px;
 }
 
 .project .title-left-down {
+	left:0;
 	text-align: right;
 	top: 310px;
 	padding: 10px 20px 0 20px;
