--- a/wp-content/themes/blankslate/style.css
+++ b/wp-content/themes/blankslate/style.css
@@ -157,25 +157,26 @@ h1.projects {
 	max-width: 200px;
 	border-top: 3px solid black;
 	position: absolute;
+	z-index: -1;
 }
 
 .project .title-right {
 	right:0;
 	text-align: left;
-	padding: 10px 20px 0 20px;
+	padding: 10px 20px 0 21px;
 }
 
 .project .title-left {
 	left: 0;
 	text-align: right;
-	padding: 10px 20px 0 20px;
+	padding: 10px 21px 0 20px;
 }
 
 .project .title-left-down {
 	left:0;
 	text-align: right;
 	top: 310px;
-	padding: 10px 20px 0 20px;
+	padding: 10px 21px 0 20px;
 }
 
 .project-bottom {
@@ -333,6 +334,11 @@ div.contact .header {
 	letter-spacing: -1px;
 }
 
+video {
+	width: 100%;
+	height: 100%;
+}
+
 .single h2 {
 	font-size: 1.25rem;
 	font-weight: 600;
@@ -349,7 +355,7 @@ div.contact .header {
 .single .block {
 	margin-bottom: 60px;
 }
-
+.single .full-image,
 .single .single-image {
 	margin-bottom: 100px;
 }
@@ -364,6 +370,8 @@ div.contact .header {
 	line-height: 2.3125rem;
 	letter-spacing: -1px;
 	font-style: italic;
+	padding-top: 20px;
+	padding-bottom: 20px;
 }
 
 .single h3 {
