--- a/wp-content/themes/blankslate/style.css
+++ b/wp-content/themes/blankslate/style.css
@@ -231,7 +231,7 @@ h1.projects {
 }
 .quote .quote-icon {
 	color: #ba3963;
-	font-weight: 700;
+	font-weight: 600;
 	font-size: 10.625rem;
 	margin-bottom: 0;
 	margin-top: 100px;
@@ -240,12 +240,20 @@ h1.projects {
 	padding-left: 10px;
 }
 .quote .quote-text {
-	font-weight: 800;
+	font-weight: 900;
 	font-style: italic;
 	font-size: 1.5625rem;
 	padding-left: 18px;
 	margin-bottom: 0;
-	line-height: 1.875rem;
+	line-height: 2.1rem;
+	letter-spacing: -1px;
+}
+.quote .quote-author {
+	font-weight: 300;
+	font-size: 1.125rem;
+	padding-left: 18px;
+	margin-bottom: 0;
+	line-height: 2.1rem;
 	letter-spacing: -1px;
 }
 
